Added new element on ramen-burger page
added ingredients 1-11

--- a/recipes/ramen-burger.html
+++ b/recipes/ramen-burger.html
@@ -7,5 +7,22 @@
 </head>
 <body>
     <h1>Ramen Burger</h1>
+    <img src="https://hips.hearstapps.com/del.h-cdn.co/assets/17/17/1024x1024/square-1493418371-delish-ramen-burgers-01.jpg?resize=1200:*" alt="Tasty Ramen Burger" height="550" width=550">
+    <h2>Description</h2>
+        <p>This recipe is designed to mimic to famous burger from Smorgsburg. It combines Asian cuisine with American by incorporating ramen noodles as the bun with a beef patty in the middle.</p>
+    <h3>Ingredients</h3>
+        <ul>
+            <li>2 packages of instant ramen</li>
+            <li>2 large eggs</li>
+            <li>salt & pepper <em>for taste</em></li>
+            <li>3/4 pound lean ground beef</li>
+            <li>1 teaspoon sesame oil</li>
+            <li>1 tablespoon soy sauce</li>
+            <li>3 tablespoons vegetable oil</li>
+            <li>3 slices American cheese</li>
+            <li>1/4 cup ketchup</li>
+            <li>2 tablespoons Sriracha</li>
+            <li>1 1/2 cups arugula </li>
+        </ul>
 </body>
 </html>
