--- a/recipes/ramen-burger.html
+++ b/recipes/ramen-burger.html
@@ -9,7 +9,7 @@
     <h1>Ramen Burger</h1>
     <img src="https://hips.hearstapps.com/del.h-cdn.co/assets/17/17/1024x1024/square-1493418371-delish-ramen-burgers-01.jpg?resize=1200:*" alt="Tasty Ramen Burger" height="550" width=550">
     <h2>Description</h2>
-        <p>This recipe is designed to mimic to famous burger from Smorgsburg. It combines Asian cuisine with American by incorporating ramen noodles as the bun with a beef patty in the middle.</p>
+        <p>This recipe is designed to mimic the famous burger from Smorgsburg. It combines Asian cuisine with American by incorporating ramen noodles as the bun with a beef patty in the middle.</p>
     <h3>Ingredients</h3>
         <ul>
             <li>2 packages of instant ramen</li>
@@ -24,5 +24,23 @@
             <li>2 tablespoons Sriracha</li>
             <li>1 1/2 cups arugula </li>
         </ul>
+    <h3>Steps</h3>
+        <ol>
+            <li>Bring a pot of water to a boil; add ramen noodles. Boil, stirring occasionally, until noodles are tender, about 3 minutes. Drain. Allow noodles to cool slightly.</li>
+            <br>
+            <li>Beat 2 eggs in a bowl; season with salt and pepper. Stir noodles into eggs until evenly coated. Divide noodles into 6 burger-size ramekins or bowls. Place a sheet of plastic wrap directly over noodles and stack another bowl on top to flatten noodles. Refrigerate until firm, about 20 minutes.</li>
+            <br>
+            <li>Mix beef, soy sauce, and sesame oil in a bowl. Divide beef mixture into three equal portions and shape into patties.</li>
+            <br>
+            <li>Heat about 1 tablespoon vegetable oil in a large skillet over medium-high heat. Invert each ramen bowl, gently tapping the bottom of the bowl until ramen loosens, careful to maintain bun shape.</li>
+            <br>
+            <li>Fry each ramen bun, without moving noodles, in hot oil until golden brown, about 3 minutes. Flip each bun and continue frying until crisp, 3 to 5 minutes more. Ramen bun should be crispy on one side and slightly softer on the other. Transfer buns to large plate with the crispy side up.</li>
+            <br>
+            <li>Heat about 1 tablespoon vegetable oil in the same skillet used to fry ramen over medium heat. Cook beef patties until burgers are lightly pink in the center, 3 to 5 minute per side. An instant-read thermometer inserted into the center should read 140 degrees F (60 degrees C). Arrange a slice of American cheese over each burger and continue to cook until melted, about 1 minute more.</li>
+            <br>
+            <li>Mix ketchup and chile-garlic sauce in a small bowl; spread mixture over the crispy side of each ramen bun. Divide arugula over 3 ramen buns. Place burgers over arugula.</li>
+            <br>
+            <li>Heat about 1 teaspoon oil in a small skillet over medium-high heat; fry remaining eggs one at a time, adding more oil as needed, until yolk is almost firm, about 1 minutes per side. Place egg over patty and top with remaining bun.</li>
+        </ol>
 </body>
 </html>
