--- a/index.html
+++ b/index.html
@@ -3,10 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Recipes</title>
 </head>
 <body>
     <h1>Odin Recipes</h1>
     <a href="./recipes/ramen-burger.html">Ramen Burger</a>
+    <a href="./recipes/vodka-rig.html">Vodka Rigatoni</a>
 </body>
 </html>
