added 3rd recipe
banana bread is spell check and complete

--- a/index.html
+++ b/index.html
@@ -8,6 +8,9 @@
 <body>
     <h1>Odin Recipes</h1>
     <a href="./recipes/ramen-burger.html">Ramen Burger</a>
+    <br>
     <a href="./recipes/vodka-rig.html">Vodka Rigatoni</a>
+    <br>
+    <a href="./recipes/banana-bread.html">Banana Bread</a>
 </body>
 </html>
