--- a/recipes/vodka-rig.html
+++ b/recipes/vodka-rig.html
@@ -7,7 +7,7 @@
 </head>
 <body>
     <h1>Vodka Rigatoni</h1>
-    <img src="https://www.allrecipes.com/thmb/dnHL0GWvKFg5WT9lViScpU97-R8=/750x0/filters:no_upscale():max_bytes(150000):strip_icc():format(webp)/1431110-vodka-rigatoni-DIZ-4x3-1-c737dba8ac09456ab7178c603ada2ee6.jpg" alt="Tasty Ramen Burger" height="550" width=550">
+    <img src="https://www.allrecipes.com/thmb/dnHL0GWvKFg5WT9lViScpU97-R8=/750x0/filters:no_upscale():max_bytes(150000):strip_icc():format(webp)/1431110-vodka-rigatoni-DIZ-4x3-1-c737dba8ac09456ab7178c603ada2ee6.jpg" alt="Tasty Vodka Rigatoni" height="550" width=550">
     <h2>Description</h2>
         <p>This recipe is a classic Italian dish that is a staple for any Italian restaurants in America.</p>
     <h3>Ingredients</h3>
