--- a/index.html
+++ b/index.html
@@ -7,10 +7,10 @@
 </head>
 <body>
     <h1>Odin Recipes</h1>
-    <a href="./recipes/ramen-burger.html">Ramen Burger</a>
+    <a href="./recipes/ramen-burger.html">Ramen Burger!</a>
     <br>
-    <a href="./recipes/vodka-rig.html">Vodka Rigatoni</a>
+    <a href="./recipes/vodka-rig.html">Vodka Rigatoni!</a>
     <br>
-    <a href="./recipes/banana-bread.html">Banana Bread</a>
+    <a href="./recipes/banana-bread.html">Banana Bread!</a>
 </body>
 </html>
