--- a/recipes/vodka-rig.html
+++ b/recipes/vodka-rig.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Vodka Rigatoni</title>
+    <title>Vodka Rigatoni!</title>
 </head>
 <body>
     <h1>Vodka Rigatoni</h1>
